NetBSD Problem Report #54473

From www@netbsd.org  Fri Aug 16 20:05:48 2019
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id AA0C17A13E
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 16 Aug 2019 20:05:48 +0000 (UTC)
Message-Id: <20190816200547.364947A1E4@mollari.NetBSD.org>
Date: Fri, 16 Aug 2019 20:05:47 +0000 (UTC)
From: n54@gmx.com
Reply-To: n54@gmx.com
To: gnats-bugs@NetBSD.org
Subject: sysinst(8) does not print notarfile correctly
X-Send-Pr-Version: www-1.0

>Number:         54473
>Category:       install
>Synopsis:       sysinst(8) does not print notarfile correctly
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Aug 16 20:10:00 +0000 2019
>Closed-Date:    Tue Aug 20 13:14:40 +0000 2019
>Last-Modified:  Tue Aug 20 13:14:40 +0000 2019
>Originator:     Kamil Rytarowski
>Release:        NetBSD 9.99.7 amd64
>Organization:
TNF
>Environment:
NetBSD chieftec 9.99.7 NetBSD 9.99.7 (GENERIC) #0: Tue Aug 13 23:42:52 CEST 2019  root@chieftec:/public/netbsd-root/sys/arch/amd64/compile/GENERIC amd64
>Description:
errno));
143 kamil@chieftec /usr/src/usr.sbin/sysinst $ grep -A1 -r notarfile .
./msg.mi.de:message notarfile
./msg.mi.de-{Das Release-Paket %s existiert nicht.}
--
./msg.mi.en:message notarfile
./msg.mi.en-{Release set %s does not exist.}
--
./msg.mi.es:message notarfile
./msg.mi.es-{El conjunto %s no existe.}
--
./msg.mi.fr:message notarfile
./msg.mi.fr-{Le composant %s n'existe pas.}
--
./msg.mi.pl:message notarfile
./msg.mi.pl-{Pakiet %s nie istnieje.}
--
./util.c:               hit_enter_to_continue(MSG_notarfile, NULL);
./util.c-               return SET_RETRY;

>How-To-Repeat:
Try to install set that is missing on .iso/ftp/similar and see message with raw '%s' characters.
>Fix:
N/A

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: install-manager->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Fri, 16 Aug 2019 20:17:20 +0000
Responsible-Changed-Why:
my fault


State-Changed-From-To: open->feedback
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sat, 17 Aug 2019 17:53:08 +0000
State-Changed-Why:
Should be fixed, can you confirm?


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54473 CVS commit: src/usr.sbin/sysinst
Date: Sat, 17 Aug 2019 17:51:19 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Aug 17 17:51:19 UTC 2019

 Modified Files:
 	src/usr.sbin/sysinst: msg.mi.de msg.mi.en msg.mi.es msg.mi.fr msg.mi.pl
 	    util.c

 Log Message:
 PR 54473: fix error prompt when a set file is missing


 To generate a diff of this commit:
 cvs rdiff -u -r1.14 -r1.15 src/usr.sbin/sysinst/msg.mi.de
 cvs rdiff -u -r1.20 -r1.21 src/usr.sbin/sysinst/msg.mi.en
 cvs rdiff -u -r1.15 -r1.16 src/usr.sbin/sysinst/msg.mi.es
 cvs rdiff -u -r1.18 -r1.19 src/usr.sbin/sysinst/msg.mi.fr
 cvs rdiff -u -r1.21 -r1.22 src/usr.sbin/sysinst/msg.mi.pl
 cvs rdiff -u -r1.29 -r1.30 src/usr.sbin/sysinst/util.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54473 CVS commit: [netbsd-9] src/usr.sbin/sysinst
Date: Sun, 18 Aug 2019 13:25:22 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Sun Aug 18 13:25:21 UTC 2019

 Modified Files:
 	src/usr.sbin/sysinst [netbsd-9]: msg.mi.de msg.mi.en msg.mi.es
 	    msg.mi.fr msg.mi.pl util.c

 Log Message:
 Pull up following revision(s) (requested by martin in ticket #82):
 	usr.sbin/sysinst/util.c: revision 1.30
 	usr.sbin/sysinst/msg.mi.fr: revision 1.19
 	usr.sbin/sysinst/msg.mi.de: revision 1.15
 	usr.sbin/sysinst/msg.mi.es: revision 1.16
 	usr.sbin/sysinst/msg.mi.pl: revision 1.22
 	usr.sbin/sysinst/msg.mi.en: revision 1.21
 PR 54473: fix error prompt when a set file is missing


 To generate a diff of this commit:
 cvs rdiff -u -r1.13.2.1 -r1.13.2.2 src/usr.sbin/sysinst/msg.mi.de
 cvs rdiff -u -r1.19.2.1 -r1.19.2.2 src/usr.sbin/sysinst/msg.mi.en
 cvs rdiff -u -r1.14.2.1 -r1.14.2.2 src/usr.sbin/sysinst/msg.mi.es
 cvs rdiff -u -r1.17.2.1 -r1.17.2.2 src/usr.sbin/sysinst/msg.mi.fr
 cvs rdiff -u -r1.20.2.1 -r1.20.2.2 src/usr.sbin/sysinst/msg.mi.pl
 cvs rdiff -u -r1.29 -r1.29.2.1 src/usr.sbin/sysinst/util.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: kamil@NetBSD.org
State-Changed-When: Tue, 20 Aug 2019 15:14:40 +0200
State-Changed-Why:
Fixed!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.