Pull up following revision(s) (requested by martin in ticket #82): 	usr.sbin/sysinst/util.c: revision 1.30 	usr.sbin/sysinst/msg.mi.fr: revision 1.19 	usr.sbin/sysinst/msg.mi.de: revision 1.15 	usr.sbin/sysinst/msg.mi.es: revision 1.16 	usr.sbin/sysinst/msg.mi.pl: revision 1.22 	usr.sbin/sysinst/msg.mi.en: revision 1.21 PR 54473: fix error prompt when a set file is missing