usr.sbin/sysinst/util.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: util.c,v 1.29 2019/07/24 10:22:04 roy Exp $	*/
+/*	$NetBSD: util.c,v 1.29.2.1 2019/08/18 13:25:21 msaitoh Exp $	*/
 
 /*
  * Copyright 1997 Piermont Information Systems Inc.
@@ -916,20 +916,25 @@ extract_file(distinfo *dist, int update)
 	if (!file_exists_p(path)) {
 
 #ifdef SUPPORT_8_3_SOURCE_FILESYSTEM
-	/*
-	 * Update path to use dist->name truncated to the first eight
-	 * characters and check again
-	 */
-	(void)snprintf(path, sizeof path, "%s/%.8s%.4s", /* 4 as includes '.' */
-	    ext_dir_for_set(dist->name), dist->name, set_postfix(dist->name));
+		/*
+		 * Update path to use dist->name truncated to the first eight
+		 * characters and check again
+		 */
+		(void)snprintf(path, sizeof path,
+		    "%s/%.8s%.4s", /* 4 as includes '.' */
+		    ext_dir_for_set(dist->name), dist->name,
+		    set_postfix(dist->name));
+
 		if (!file_exists_p(path)) {
 #endif /* SUPPORT_8_3_SOURCE_FILESYSTEM */
+			tarstats.nnotfound++;
 
-		tarstats.nnotfound++;
-
-		hit_enter_to_continue(MSG_notarfile, NULL);
-		return SET_RETRY;
-	}
+			char *err = str_arg_subst(msg_string(MSG_notarfile),
+			    1, &dist->name);
+			hit_enter_to_continue(err, NULL);
+			free(err);
+			return SET_RETRY;
+		}
 #ifdef SUPPORT_8_3_SOURCE_FILESYSTEM
 	}
 #endif /* SUPPORT_8_3_SOURCE_FILESYSTEM */
